# allocobot

./: .gitignore  Cargo.toml  agent.dot  agent_net.json  basic.dot  job.json  poi.dot  poi_net.json
jupyter/: Swarm_mini.html  allocobot_testing.ipynb  terrible_test.ipynb  z3.ipynb
output/: agent.dot  agent_net.json  basic.dot  cost.dot  cost_net.json  job.json  poi.dot  poi_net.json
src/: agents.rs  constants.rs  features.rs  lib.rs  main.rs  planner.rs  poi.rs  primitives.rs  state.rs  subtasks.rs  tasks.rs  timeline.rs  util.rs
src/archive/: planner.rs
src/description/: agent.rs  dependency.rs  gender.rs  job.rs  mod.rs  poi.rs  primitive.rs  rating.rs  target.rs  task.rs  units.rs  weights.rs
src/description/generators/: agent_net.rs  basic_net.rs  cost_net.rs  mod.rs  poi_net.rs
src/petri/: cost.rs  data.rs  matrix.rs  mod.rs  net.rs  place.rs  token.rs  transition.rs
src/petri/nets/: agent.rs  basic.rs  mod.rs  net.rs
tooling/inspector/: index.html  package-lock.json  package.json
tooling/inspector/src/: ActionIconButton.tsx  App.tsx  MetaDataPreview.tsx  MetaDataRenderer.tsx  NodeListLink.tsx  NumberSpinner.tsx  PeerRenderer.tsx  TextInput.tsx  error-page.tsx  index.css  main.tsx  store.ts
tooling/inspector/src/routes/: place.tsx  root.tsx  transition.tsx
