[package]
name = "allocobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
plotly = "0.8.3"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = true
codegen-units = 1