[package]
name = "allocobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
nalgebra = { version = "0.31", features = ["serde-serialize-no-std"]}
# plotly = "0.8.3"
uuid = { version = "1.3.3", features = ["v4","fast-rng","macro-diagnostics"]}

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = true
codegen-units = 1